# hex-dashboard-mcp

./: CLAUDE.md  README.md  pyproject.toml  server.py
