[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hex-dashboard-mcp"
version = "0.1.0"
description = "Hex Enterprise MCP server for dashboard design and troubleshooting"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.scripts]
hex-dashboard-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
